fixed spacing issue on how it works pages

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -212,7 +212,11 @@ h3.custom-h3 {
 }
 
 .tile-60 {
-  min-height: 60%;
+  // min-height: 60%;
+}
+
+.athenahire-blockquote {
+  padding-top: 30px;
 }
 
 .opt-about-header-section {
